Rework example to use new API

--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,7 @@
   </head>
 
   <body>
-    <script src="/main.js"></script>
+    <script src="./client.js"></script>
+    <em>(see console)</em>
   </body>
 </html>
